# Phi-TK

./: .gitignore  README.md  conf.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: CI.yaml  Dockerfile.arm64  linux-arm64.yml  tauri.yaml
src/: AboutView.vue  App.vue  BatchRenderView.vue  RPEView.vue  RenderView.vue  Setting.vue  TasksView.vue  common.ts  main.ts  model.ts  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/respack/: info.yml
src-tauri/capabilities/: migrated.json
src-tauri/icons/: 128x128@2x.xcf
src-tauri/src/: ipc.rs  lib.rs  main.rs  preview.rs  render.rs  task.rs
src/assets/: main.css
src/components/: ConfigView.vue
src/router/: index.ts
