[package]
name = "phigros-tk"
version = "0.1.4"
description = "Phigros-TK"
authors = ["Mivik", "HLMC", "Beks"]
license = ""
repository = ""
default-run = "phigros-tk"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
futures = "0.3"
rayon = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "dialog-message", "system-tray", "shell-open", "fs-read-file", "protocol-asset", "dialog-open", "api-all"] }

anyhow = { version = "1.0.70", features = ["backtrace"] }
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", default-features = false }
prpr = { git = "https://github.com/Winamin/phira-test.git", package = "prpr", branch = "render-lib" }
# prpr = { path = "../../phira/prpr" }

sasa = { git = "https://github.com/Mivik/sasa" }
serde_yaml = "0.9"
tokio = { version = "1.36.0", features = ["process", "rt-multi-thread", "fs", "full"] }
tracing = "0.1.37"
tempfile = "3.8.0"
chrono = "0.4.28"
open = "5.0.0"
fs4 = { version = "0.6.6", features = ["tokio-async"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 2
# debug = 1

[profile.dev.package."*"]
opt-level = 2
