[package]
name = "Phi-TK"
version = "1.0.0"
description = "Phi-TK"
authors = ["Mivik", "Link"]
license = ""
repository = ""
default-run = "Phi-TK"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
futures = "0.3"
log = "0.4"
rayon = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }

anyhow = { version = "1.0.70", features = ["backtrace"] }
#prpr = { path = "/home/link/Phi-TK-render-lib/prpr" }
macroquad = { git = "https://github.com/Winamin/prpr-macroquad", default-features = false }
prpr = { git = "https://github.com/Winamin/Phi-TK-render-lib", package = "prpr", branch = "render-lib" }
# prpr = { path = "../../phira/prpr" }

sasa = { git = "https://github.com/Winamin/sasa" }
#sasa = {path = "/home/link/sasa"}
serde_yaml = "0.9"
tokio = { version = "1.36.0", features = ["process", "rt-multi-thread", "fs", "full"] }
tracing = "0.1.37"
tempfile = "3.8.0"
chrono = "0.4.28"
open = "5.0.0"
fs4 = { version = "0.6.6", features = ["tokio-async"] }
smallvec = "1.11.2"
regex = "1.10.0"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
# debug = 1

[profile.dev.package."*"]
opt-level = 3

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
